--- a/Lab_Assignment_2.ipynb
+++ b/Lab_Assignment_2.ipynb
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "oWeJwe_4vDzN"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -51,11 +51,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "_ACpd4-0t9IP"
+        "id": "_ACpd4-0t9IP",
+        "outputId": "6ebb6db9-992e-486a-ac44-3a799762bf23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matrix with seed:\n",
+            " [[10 37 16]\n",
+            " [ 1 29 26]\n",
+            " [30 49 30]]\n",
+            "\n",
+            "Matrix without seed:\n",
+            " [[ 9 10  1]\n",
+            " [43 41 37]\n",
+            " [17 37 48]]\n"
+          ]
+        }
+      ],
       "source": [
         "np.random.seed(10)\n",
         "matrix_with_seed = np.random.randint(1, 50, size=(3, 3))\n",
