--- a/Lab_Assignment_2.ipynb
+++ b/Lab_Assignment_2.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNZjYfOfIn9qpbcv5d/j59/",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/zun43d/CSE-413/blob/main/Lab_Assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -34,7 +46,7 @@
       "metadata": {
         "id": "oWeJwe_4vDzN"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -51,13 +63,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "_ACpd4-0t9IP",
-        "outputId": "6ebb6db9-992e-486a-ac44-3a799762bf23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6155611a-dbfe-4529-8d85-dc876ee432f0"
       },
       "outputs": [
         {
@@ -70,9 +82,9 @@
             " [30 49 30]]\n",
             "\n",
             "Matrix without seed:\n",
-            " [[ 9 10  1]\n",
-            " [43 41 37]\n",
-            " [17 37 48]]\n"
+            " [[32  3 29]\n",
+            " [33 22 15]\n",
+            " [31  9 23]]\n"
           ]
         }
       ],
@@ -81,6 +93,7 @@
         "matrix_with_seed = np.random.randint(1, 50, size=(3, 3))\n",
         "print(\"Matrix with seed:\\n\", matrix_with_seed)\n",
         "\n",
+        "np.random.seed(None)\n",
         "matrix_without_seed = np.random.randint(1, 50, size=(3, 3))\n",
         "print(\"\\nMatrix without seed:\\n\", matrix_without_seed)"
       ]
